tests/paczka1/small_fuzzy/53211954.err
Error in line 3: b0nJRsRZK A548 710,4
Error in line 1: srZPyuagycm S99 58,1
Error in line 7: wzkzQQm S887 37,6
